--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/node": "^17.0.42",
+    "contentful": "^9.1.32",
     "path": "^0.12.7",
     "url": "^0.11.0",
     "vue": "^3.2.25"
