--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "path": "^0.12.7",
     "url": "^0.11.0",
     "uuid": "^8.3.2",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-meta": "^2.4.0"
   },
   "devDependencies": {
     "@types/uuid": "^8.3.4",
