--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "^0.11.0",
     "uuid": "^8.3.2",
     "vue": "^3.2.25",
-    "vue-meta": "^2.4.0"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/uuid": "^8.3.4",
