--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -32,7 +33,13 @@
     "eslint-plugin-vue": "^9.1.1",
     "postcss": "^8.4.14",
     "postcss-html": "^1.5.0",
+    "postcss-nesting": "^10.1.10",
     "prettier": "^2.7.1",
+    "stylelint": "^14.9.1",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard-vue": "^1.0.0",
+    "stylelint-stylus": "^0.16.1",
+    "stylus": "^0.58.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
