--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@types/three": "^0.144.0",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
@@ -33,6 +34,7 @@
   "dependencies": {
     "dexie": "^3.2.2",
     "ethers": "^5.6.9",
+    "three": "^0.145.0",
     "web3modal": "^1.9.8"
   }
 }
