--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,10 @@
     {
       "type": "chrome",
       "request": "launch",
+      // "request": "attach",
       "runtimeExecutable": "/usr/bin/brave-browser",
       "name": "Launch Brave against localhost",
+      // "port": 3000,
       "url": "http://localhost:3000",
       "webRoot": "${workspaceFolder}",
       "runtimeArgs": [ "--remote-debugging-port=9222" ]
