--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "hardhat-language-server.trace.server.verbosity": "verbose",
   "hardhat.formatter": "forge",
   "hardhat.telemetry": true,
-  "solidity.defaultCompiler": "localNodeModule"
+  "solidity.defaultCompiler": "localNodeModule",
+  "nuxt.isNuxtApp": false
 }
