--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {
     "@types/three": "^0.144.0",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/nuxt": "^10.1.2",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
@@ -33,10 +35,14 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.4.2",
+    "@wagmi/core": "^0.10.11",
+    "@web3modal/ethereum": "^2.3.7",
+    "@web3modal/html": "^2.3.7",
     "dexie": "^3.2.2",
     "ethers": "^5.6.9",
     "http-proxy-middleware": "^2.0.6",
     "three": "^0.145.0",
+    "uuid": "^9.0.0",
     "web3modal": "^1.9.8"
   }
 }
