--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --https --ssl-cert localhost.pem --ssl-key localhost-key.pem",
     "generate": "nuxt generate",
     "preview": "nuxt preview"
   },
   "devDependencies": {
     "@types/three": "^0.144.0",
+    "@types/uuid": "^9.0.1",
     "@vueuse/core": "^10.1.2",
     "@vueuse/nuxt": "^10.1.2",
     "autoprefixer": "^10.4.7",
@@ -29,7 +30,7 @@
     "stylelint-config-standard-vue": "^1.0.0",
     "stylelint-stylus": "^0.16.1",
     "stylus": "^0.58.1",
-    "typescript": "^4.5.4",
+    "typescript": "4.9.5",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
   },
@@ -42,7 +43,6 @@
     "ethers": "^5.6.9",
     "http-proxy-middleware": "^2.0.6",
     "three": "^0.145.0",
-    "uuid": "^9.0.0",
-    "web3modal": "^1.9.8"
+    "uuid": "^9.0.0"
   }
 }
