--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.4.2",
-    "@wagmi/core": "^0.10.11",
     "@web3modal/ethereum": "^2.3.7",
     "@web3modal/html": "^2.3.7",
     "dexie": "^3.2.2",
     "ethers": "^5.6.9",
     "http-proxy-middleware": "^2.0.6",
     "three": "^0.145.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "wagmi": "0.12.13"
   }
 }
