--- a/contracts/package.json
+++ b/contracts/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
+    "@truffle/hdwallet-provider": "^2.1.11",
     "dotenv": "^16.0.3",
     "hardhat-gas-reporter": "^1.0.9"
   }
