--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dexie": "^3.2.2",
     "ethers": "^5.6.9",
     "http-proxy-middleware": "^2.0.6",
+    "interactjs": "^1.10.17",
     "three": "^0.145.0",
     "uuid": "^9.0.0",
     "wagmi": "0.12.13"
