update move and carousel

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@coddicat/vue-pinch-scroll-zoom": "^4.2.3",
     "@nuxt/kit": "^3.4.2",
+    "@vuepic/vue-datepicker": "^5.3.0",
     "@web3modal/ethereum": "^2.3.7",
     "@web3modal/html": "^2.3.7",
     "contentful-management": "^10.38.2",
