setup for drag and drop uploading

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev --https --ssl-cert localhost.pem --ssl-key localhost-key.pem",
+    "d": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview"
   },
