remove redundant files, optimization of image loading

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev --https --ssl-cert localhost.pem --ssl-key localhost-key.pem",
-    "d": "nuxt dev",
+    "d": "nuxt dev --https --ssl-cert localhost.pem --ssl-key localhost-key.pem",
     "generate": "nuxt generate",
     "preview": "nuxt preview"
   },
@@ -38,20 +38,20 @@
   },
   "dependencies": {
     "@coddicat/vue-pinch-scroll-zoom": "^4.2.3",
-    "@vuepic/vue-datepicker": "^5.3.0",
-    "contentful-management": "^10.38.2",
-    "nuxt-swiper": "^1.1.1",
-    "swiper": "^9.4.1",
-    "vue-awesome-swiper": "^5.0.1",
     "@nuxt/kit": "^3.4.2",
+    "@vuepic/vue-datepicker": "^5.3.0",
     "@web3modal/ethereum": "^2.3.7",
     "@web3modal/html": "^2.3.7",
+    "contentful-management": "^10.38.2",
     "dexie": "^3.2.2",
     "ethers": "^5.6.9",
     "http-proxy-middleware": "^2.0.6",
     "interactjs": "^1.10.17",
+    "nuxt-swiper": "^1.1.1",
+    "swiper": "^9.4.1",
     "three": "^0.145.0",
     "uuid": "^9.0.0",
+    "vue-awesome-swiper": "^5.0.1",
     "wagmi": "0.12.13"
   }
 }
