upgrade nuxt, setup eslint

--- a/package.json
+++ b/package.json
@@ -1,44 +1,17 @@
 {
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --https --ssl-cert localhost.pem --ssl-key localhost-key.pem",
-    "d": "nuxt dev --https --ssl-cert localhost.pem --ssl-key localhost-key.pem",
+    "dev": "nuxt dev",
+    "d": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
-  },
-  "devDependencies": {
-    "@types/swiper": "^6.0.0",
-    "@types/three": "^0.144.0",
-    "@types/uuid": "^9.0.1",
-    "@vueuse/core": "^10.1.2",
-    "@vueuse/nuxt": "^10.1.2",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.1.1",
-    "nuxt": "3.4.2",
-    "postcss": "^8.4.14",
-    "postcss-html": "^1.5.0",
-    "postcss-nesting": "^10.1.10",
-    "prettier": "^2.7.1",
-    "stylelint": "^15.6.2",
-    "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-stylus": "^0.18.0",
-    "stylus": "^0.58.1",
-    "typescript": "4.9.5",
-    "vite": "^2.9.9",
-    "vue-tsc": "^0.34.7"
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@coddicat/vue-pinch-scroll-zoom": "^4.2.3",
-    "@nuxt/kit": "^3.4.2",
     "@vuepic/vue-datepicker": "^5.3.0",
     "@web3modal/ethereum": "^2.3.7",
     "@web3modal/html": "^2.3.7",
@@ -46,13 +19,21 @@
     "dexie": "^3.2.2",
     "ethers": "^5.6.9",
     "http-proxy-middleware": "^2.0.6",
-    "interactjs": "^1.10.17",
+    "interactjs": "^1.10.27",
+    "nuxt": "^3.13.0",
     "nuxt-swiper": "^1.1.1",
     "swiper": "^9.4.1",
     "three": "^0.145.0",
     "uuid": "^9.0.0",
-    "vue-matomo": "^4.2.0",
+    "vue": "latest",
+    "vue-router": "latest",
     "wagmi": "0.12.13"
+  },
+  "devDependencies": {
+    "@types/swiper": "^6.0.0",
+    "@types/three": "^0.144.0",
+    "@types/uuid": "^9.0.1",
+    "stylus": "^0.63.0"
   },
   "packageManager": "yarn@3.6.1"
 }
