--- a/example.env
+++ b/example.env
@@ -1,10 +1,14 @@
 VITE_CONTENTFUL_SPACE_ID=
 VITE_CONTENTFUL_ACCESS_TOKEN=
+VITE_CONTENTFUL_CONTENT_MANAGEMENT_ACCESS_TOKEN=
 
 VITE_APP_RPC_URL_LOCALHOST=http://127.0.0.1:8545/
 VITE_APP_RPC_URL_GOERLI=https://rpc.ankr.com/eth_goerli
 
-VITE_APP_MSG_CONTRACT=0x5FbDB2315678afecb367f032d93F642f64180aa3
-VITE_APP_TEST_NFT_CONTRACT_ACP_1000_GOERLI=0x90219b9ABcA9533220a3E0B71e765908EE6d20C8
-VITE_APP_TEST_NFT_CONTRACT_ACP_1000_RINKEBY=0x47488CA96d736E63365d75C471050b5074CBD076
+VITE_APP_MSG_CONTRACT=
+VITE_APP_TEST_NFT_CONTRACT_ACP_1000_GOERLI=
 VITE_APP_TEST_NFT_BASE_URI=https://www.721.so/api/example/metadata/
+VITE_APP_WALLET_CONNECT_ID=
+VITE_REOWN_APPKIT_PROJECT_ID=
+
+VITE_ADMIN_PASSWORD=
