--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "d": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "wrangler:dev": "wrangler pages dev dist"
   },
   "dependencies": {
     "@coddicat/vue-pinch-scroll-zoom": "^4.2.3",
@@ -40,7 +41,8 @@
     "@types/swiper": "^6.0.0",
     "@types/three": "^0.144.0",
     "@types/uuid": "^9.0.1",
-    "stylus": "^0.63.0"
+    "stylus": "^0.63.0",
+    "wrangler": "^4.50.0"
   },
   "packageManager": "yarn@3.6.1"
 }
