--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "wrangler:dev": "wrangler pages dev dist"
   },
   "dependencies": {
     "@coddicat/vue-pinch-scroll-zoom": "^4.2.3",
@@ -41,8 +40,7 @@
     "@types/swiper": "^6.0.0",
     "@types/three": "^0.144.0",
     "@types/uuid": "^9.0.1",
-    "stylus": "^0.63.0",
-    "wrangler": "^4.50.0"
+    "stylus": "^0.63.0"
   },
   "packageManager": "yarn@3.6.1"
 }
