--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "d": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@coddicat/vue-pinch-scroll-zoom": "^4.2.3",
