--- a/example.env
+++ b/example.env
@@ -1,11 +1,22 @@
-VITE_CONTENTFUL_SPACE_ID=
+###########################
+########## client #########
+###########################
 VITE_CONTENTFUL_ACCESS_TOKEN=
+VITE_CONTENTFUL_SPACE_ID=
 
+## optional - you get warrning in console for missing keys
 VITE_APP_RPC_URL_LOCALHOST=http://127.0.0.1:8545/
 VITE_APP_RPC_URL_GOERLI=https://rpc.ankr.com/eth_goerli
-
 VITE_APP_MSG_CONTRACT=
 VITE_APP_TEST_NFT_CONTRACT_ACP_1000_GOERLI=
-VITE_APP_TEST_NFT_BASE_URI=https://www.721.so/api/example/metadata/
+VITE_APP_TEST_NFT_BASE_URI=
 VITE_APP_WALLET_CONNECT_ID=
 VITE_REOWN_APPKIT_PROJECT_ID=
+
+
+###########################
+########## server #########
+###########################
+NUXT_CONTENTFUL_MANAGEMENT_TOKEN=
+NUXT_CONTENTFUL_ACCESS_TOKEN=
+NUXT_CONTENTFUL_SPACE_ID=
