--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "d": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open",
+    "test:e2e:ci": "start-server-and-test dev http://localhost:3000 cypress:run",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@coddicat/vue-pinch-scroll-zoom": "^4.2.3",
@@ -37,10 +46,20 @@
     "wagmi": "^2.14.16"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.20.1",
     "@types/swiper": "^6.0.0",
     "@types/three": "^0.144.0",
     "@types/uuid": "^9.0.1",
-    "stylus": "^0.63.0"
+    "@vitest/coverage-v8": "4.0.13",
+    "@vitest/ui": "^4.0.13",
+    "@vue/test-utils": "^2.4.6",
+    "cypress": "^15.7.0",
+    "happy-dom": "^20.0.10",
+    "start-server-and-test": "^2.1.3",
+    "stylus": "^0.63.0",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.13",
+    "wait-on": "^9.0.3"
   },
   "packageManager": "yarn@3.6.1"
 }
