--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
-    "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "cypress run",
     "test:e2e:open": "cypress open",
@@ -50,7 +49,7 @@
     "@types/swiper": "^6.0.0",
     "@types/three": "^0.144.0",
     "@types/uuid": "^9.0.1",
-    "@vitest/coverage-v8": "4.0.13",
+    "@vitest/coverage-v8": "^4.0.13",
     "@vitest/ui": "^4.0.13",
     "@vue/test-utils": "^2.4.6",
     "cypress": "^15.7.0",
