--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
+    "build:analyze": "ANALYZE=true nuxt build",
     "dev": "nuxt dev",
     "d": "nuxt dev",
     "generate": "nuxt generate",
@@ -54,6 +55,7 @@
     "@vue/test-utils": "^2.4.6",
     "cypress": "^15.7.0",
     "happy-dom": "^20.0.10",
+    "rollup-plugin-visualizer": "^6.0.5",
     "start-server-and-test": "^2.1.3",
     "stylus": "^0.63.0",
     "typescript": "^5.9.3",
