--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "packageManager": "yarn@3.6.1",
   "resolutions": {
     "@metamask/sdk": "^0.33.1",
-    "debug": "^4.3.4"
+    "debug": "^4.3.4",
+    "systeminformation": "^5.27.14"
   }
 }
